--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "libft.h": "c",
-    "type_traits": "c"
+    "type_traits": "c",
+    "minishell.h": "c"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
